<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:fillViewport="true" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_horizontal"
        android:background="@color/transparent"
	    android:orientation="vertical" >
	
	    <ImageView
	        android:layout_width="@dimen/icon"
	        android:layout_height="@dimen/icon"
	        android:src="@drawable/ncu" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:gravity="center"
	        android:text="@string/funct_title"
	        android:textColor="@color/white"
	        android:textStyle="bold"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lab"
	        android:textColor="@color/white"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/developer"
	        android:textColor="@color/white"
	        android:textStyle="bold" />
	
	</LinearLayout>

</ScrollView>